--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.31.0",
     "nodemon": "^2.0.7",
     "prettier": "2.2.1"
   },
