--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prettier": "2.2.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.4"
   }
 }
